data/neo4j/overlays/staging/neo4j-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j
  labels:
    app: neo4j

spec:
  serviceName: neo4j
  selector:
    matchLabels:
      app: neo4j
      tier: data
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: neo4j
        tier: data
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: neo4j
                    operator: In
                    values:
                      - neo4j
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - neo4j
              topologyKey: kubernetes.io/hostname
      volumes:
        - name: neo4j
          hostPath:
            path: /data/local/neo4j
        - name: neo4j-config
          hostPath:
            path: /data/local/neo4j-config
        - name: neo4j-plugins
          hostPath:
            path: /data/local/neo4j-plugins
        - name: neo4j-backup
          hostPath:
            path: /data/local/neo4j-backup
      containers:
        - name: neo4j
          image: neo4j:5-enterprise
          ports:
            - containerPort: 7474
            - containerPort: 7687
          volumeMounts:
            - name: neo4j
              mountPath: /data
            - name: neo4j-config
              mountPath: /var/lib/neo4j/conf/
            - name: neo4j-backup
              mountPath: /tmp/backup/
            - name: neo4j-plugins
              mountPath: /var/lib/neo4j/plugins
